@@ -1,3 +1,8 @@
+2008-10-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/admin_gtk.py:
+	Create the widget before base class's render is called.
+
 2008-10-08  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/admin_gtk.py:
